# things-sak

./: .coderabbit.yaml  Cargo.toml  LICENSE  README.md
examples/macos/: README.md  com.example.things-sak.daemon.plist  com.example.things-sak.plist  things-sak.env.example
src/: applescript.rs  main.rs  mcp.rs  ops.rs  serve.rs  types.rs  url_scheme.rs
